changed code to Cloud

--- a/appsettings.env
+++ b/appsettings.env
@@ -1,6 +1,3 @@
 # .env
-
-DB_HOST_Local=RDS endpoint/ Localhost
-DB_USER_Local=admin
-DB_PASSWORD_Local=Ccit-1234
-DB_NAME_Local=ccituserdb
+S3_Bucket_Name = ccituserimages
+AWS_Region = ap-south-2
