--- a/appsettings.env
+++ b/appsettings.env
@@ -1,9 +1,9 @@
 # .env
 
 DB_HOST_Local = YOUR_DB_SERVER_NAME
-DB_USER_Local ="" YOUR_DB_USER_NAME
-DB_PASSWORD_Local YOUR_DB_PASSWORD
-DB_NAME_Local  YOUR_DB_NAME
+DB_USER_Local = YOUR_DB_USER_NAME
+DB_PASSWORD_Local = YOUR_DB_PASSWORD
+DB_NAME_Local = YOUR_DB_NAME
 
 S3_Bucket_Name = ccituserimages
 AWS_Region = ap-south-2
